--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cookie-session": "^2.1.0",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "mongoose": "^8.0.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -30,6 +31,7 @@
     "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.1",
     "@types/node": "^20.11.19",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
